Add reset css (Normalize.css)

--- a/src/Components/Generic/Stepper/Stepper.scss
+++ b/src/Components/Generic/Stepper/Stepper.scss
@@ -2,8 +2,10 @@
   .stepper {
     display: flex;
     width: 100%;
+    max-width: 40em;
     align-items: center;
     flex-direction: row;
+    margin: 0 auto;
   }
 
   .step-connector {
