--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -1,3 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+@font-face {
+  font-family: 'h5p-hub-publish';
+  src:  url('../assets/fonts/h5p-hub-publish.eot?wy8ylc');
+  src:  url('../assets/fonts/h5p-hub-publish.eot?wy8ylc#iefix') format('embedded-opentype'),
+    url('../assets/fonts/h5p-hub-publish.ttf?wy8ylc') format('truetype'),
+    url('../assets/fonts/h5p-hub-publish.woff?wy8ylc') format('woff'),
+    url('../assets/fonts/h5p-hub-publish.svg?wy8ylc#h5p-hub') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
 .h5p-hub-publish {
   max-width: 900px;
   border: 1px solid green;
@@ -34,4 +48,37 @@
     text-align: center;
   }
 
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'h5p-hub-publish' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+  .icon-dropdown:before {
+    content: "\e900";
+  }
+  .icon-info:before {
+    content: "\e901";
+  }
+  .icon-thick-arrow:before {
+    content: "\e902";
+  }
+  .icon-check:before {
+    content: "\e903";
+  }
+  .icon-close:before {
+    content: "\e904";
+  }
+  .icon-plus:before {
+    content: "\e905";
+  }
 }
