--- a/src/components/generic/stepper/Stepper.scss
+++ b/src/components/generic/stepper/Stepper.scss
@@ -5,17 +5,23 @@
     max-width: 40em;
     align-items: center;
     flex-direction: row;
-    margin: 0 auto;
+    margin: 2em auto;
+    padding: 0 2em;
+    box-sizing: border-box;
   }
 
   .step-connector {
-    flex: 1 1 auto;
+    flex-grow: 1;
+    margin-left: -2em;
+    margin-right: -2em;
+    position: relative;
+    top: -0.6em;
   }
 
   .step-connector-line {
     display: block;
     border-top-style: solid;
     border-top-width: 1px;
-    border-color: #bdbdbd;
+    border-color: #d5d5d7;
   }
 }
