--- a/src/components/generic/chips/Chips.scss
+++ b/src/components/generic/chips/Chips.scss
@@ -1,36 +1,35 @@
-.h5p-hub-publish {
-  .chips-list {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    flex-wrap: wrap;
+.h5p-hub-publish .chips-list {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  flex-wrap: wrap;
 
-    li {
-      button {
-        font-size: 0.708em;
-        border-radius: 0.083em;
-        margin-right: 0.5em;
-        margin-top: 0.5em;
-        font-style: italic;
-        color: #000000;
-        display: flex;
-        align-items: center;
-        padding: 0.75em 0.75em;
+  li {
+    button {
+      font-size: 0.708em;
+      border-radius: 0.083em;
+      margin-right: 0.5em;
+      margin-top: 0.5em;
+      font-style: italic;
+      color: #000000;
+      display: flex;
+      align-items: center;
+      padding: 0.75em 0.75em;
+      border-color: #dddee2;
+      outline: none;
+      .icon-close {
+        font-size: 0.8em;
+        margin-left: 2em;
+      }
+      &:focus{
+        background-color: #e8e8e8;
         border-color: #dddee2;
-        outline: none       ;
-        .icon-close {
-          font-size: 0.8em;
-          margin-left: 2em;
-        }
-        &:focus{
-          background-color: #e8e8e8;
-          border-color: #dddee2;
-        }
-        &:hover {
-          background-color: #f5f5f5;;
-          border-color: #dddee2;
-        }
+      }
+      &:hover {
+        background-color: #f5f5f5;
+        border-color: #dddee2;
       }
     }
   }
 }
+
