--- a/src/components/generic/form/Element.scss
+++ b/src/components/generic/form/Element.scss
@@ -2,5 +2,17 @@
   label {
     display: block;
     color: #363636;
+    margin-bottom: 1em;
+  }
+  input{
+    font-size: 0.833em;
+    padding: 0.625em 0.833em ;
+    font-style: italic;
+    border: 1px solid #bebdcd;
+    border-radius: 0.208em;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
   }
 }
