--- a/src/components/generic/form/Element.scss
+++ b/src/components/generic/form/Element.scss
@@ -2,7 +2,11 @@
   label {
     display: block;
     color: #363636;
-    margin-bottom: 1em;
+    margin-bottom: 0.583em;
+  }
+  .description{
+    font-size: 0.833em;
+    color: #707475;
   }
   input{
     font-size: 0.833em;
@@ -14,5 +18,6 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    margin-bottom: 1em;
   }
 }
