Fix line height for dropdowns

--- a/src/components/generic/dropdown/Dropdown.scss
+++ b/src/components/generic/dropdown/Dropdown.scss
@@ -12,6 +12,7 @@
     width: 100%;
     -webkit-appearance: none;
     -moz-appearance: none;
+    line-height: normal;
 
     &:disabled {
       background-color: #ededed;
