--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -13,6 +13,7 @@
 }
 
 .h5p-hub-publish {
+  position: relative;
   margin: 2em auto;
   font-family: 'Open Sans', sans-serif;
   max-width: 1024px;
