--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import "../styles/variables";
 
 @font-face {
   font-family: 'h5p-hub-publish';
@@ -80,6 +81,41 @@
 
       .next {
         margin-left: auto;
+      }
+    }
+  }
+
+  .dropdown-element-wrapper {
+    flex-grow: 1;
+    min-width: 17em;
+    //Make space between dropdowns that isn't showed when wrapped
+    border-right: 1em solid #ffffff;
+  }
+
+  .form-element {
+    &.row {
+      display: flex;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+
+      &.dropdowns {
+        margin-right: -1em;
+      }
+    }
+    &.columns {
+      display: flex;
+      @media (max-width: $screen-small) {
+        flex-wrap: wrap;
+      }
+      margin-right: -1em;
+      .column {
+        width: 50%;
+        border-right: 1em solid #ffffff;
+        @media (max-width: $screen-small) {
+          width: 100%;
+          margin-right: 0;
+        }
       }
     }
   }
