--- a/src/components/generic/form/Element.scss
+++ b/src/components/generic/form/Element.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/mixins';
+
 .h5p-hub-publish .form-element {
   font-family: 'Open Sans', sans-serif;
   margin: 2em 0;
@@ -33,9 +35,21 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
   }
-  .description{
+  .description {
     font-size: 0.833em;
     color: #707475;
     margin: 0.5em 0;
+  }
+  textarea {
+    resize: none;
+    font-size: 0.833em;
+    width: 100%;
+    border-radius: 0.208em;
+    padding: 0.833em 0.833em;
+    box-sizing: border-box;
+    @include scrollbar;
+    &::placeholder {
+      font-style: italic;
+    }
   }
 }
