--- a/src/components/generic/form/Element.scss
+++ b/src/components/generic/form/Element.scss
@@ -27,13 +27,15 @@
   input{
     font-size: 0.833em;
     padding: 0.625em 0.833em ;
-    font-style: italic;
     border: 1px solid #bebdcd;
     border-radius: 0.208em;
     width: 100%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    &::placeholder {
+      font-style: italic;
+    }
   }
   .description {
     font-size: 0.833em;
