HFP-2974 Add image upload + preview

--- a/src/components/generic/form/ImagePreview.scss
+++ b/src/components/generic/form/ImagePreview.scss
@@ -1,7 +1,8 @@
 .h5p-hub-publish .image-preview {
   width: 4em;
   height: 3em;
-  background: #C2DCF7;
   margin-right: 0.5em;
   display: inline-block;
+  background-size: cover;
+  background-position: center;
 }
