--- a/src/components/generic/accordion/Accordion.scss
+++ b/src/components/generic/accordion/Accordion.scss
@@ -10,7 +10,7 @@
       left: 0;
       display: flex;
       padding: 0.2em 0.2em;
-      &.open{
+      &.open {
         transform: rotate(-90deg);
       }
     }
@@ -23,9 +23,10 @@
     width: 100%;
     justify-self: start;
     display: flex;
+    
     .accordion-header {
       border: none;
-      left: 0;
+      text-align: left;
       color: #616161;
     }
   }
