--- a/src/components/generic/message/Message.scss
+++ b/src/components/generic/message/Message.scss
@@ -2,6 +2,7 @@
   font-size: 0.833em;
   border-left: 0.3em solid;
   padding: 1em;
+  margin: 0.5em 0;
 
   &.warning {
     border-color: #FDCC31;
