HFP-2972 Specify prop-types and change arrows in popup

--- a/src/components/generic/accordion/Accordion.scss
+++ b/src/components/generic/accordion/Accordion.scss
@@ -10,8 +10,9 @@
       left: 0;
       display: flex;
       padding: 0.2em 0.2em;
+      transform: rotate(-90deg);
       &.open {
-        transform: rotate(-90deg);
+        transform: rotate(0);
       }
     }
   }
