--- a/src/components/steps/Review.scss
+++ b/src/components/steps/Review.scss
@@ -28,5 +28,18 @@
       margin: 0;
       padding: 0.5em 0 0.5em 1em;
     }
+    .img-alt{
+      display: flex;
+      align-items: center;
+    }
+    .screenshots{
+      margin-bottom: 0.2em;
+      &:last-child{
+        margin-bottom: 0;
+      }
+      .image-preview{
+        font-size: 0.75em;
+      }
+    }
   }
 }
