Fixes after UX review

--- a/src/components/generic/dropdown/Dropdown.scss
+++ b/src/components/generic/dropdown/Dropdown.scss
@@ -26,8 +26,11 @@
     }
   }
 
-  .icon-arrow-down {
+  div.icon-arrow-down {
     position: relative;
+    line-height: 1.1em;
+    pointer-events: none;
+
     &:before {
       content: "\e900";	
       position: absolute;
