--- a/src/components/generic/selector/SearchField/SearchField.scss
+++ b/src/components/generic/selector/SearchField/SearchField.scss
@@ -26,8 +26,8 @@
   }
 
   #filter-search-bar {
-    border: 0.04545em solid #e6e6e8;
-    padding: 0.7em;
+    border: none;
+    padding: 0.833em;
     font-style: italic;
     font-size: 1.25em;
     width: 100%;
