--- a/src/components/generic/form/Element.scss
+++ b/src/components/generic/form/Element.scss
@@ -18,14 +18,14 @@
       top: -0.2em;
     }
     input{
-      font-size: 0.833em;
-      padding: 0.625em 0.833em ;
+      font-size: 0.917em;
+      padding: 0.833em;
       border: 1px solid #bebdcd;
       border-radius: 0.208em;
       width: 100%;
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
       box-sizing: border-box;
+      line-height: normal;
+
       &::placeholder {
         font-style: italic;
       }
@@ -33,7 +33,7 @@
     .description {
       font-size: 0.833em;
       color: #707475;
-      margin: 0.5em 0;
+      margin: 0 0 1em 0;
     }
     textarea {
       resize: none;
@@ -47,14 +47,15 @@
         font-style: italic;
       }
     }
-    .link-button{
+    .link-button {
       border: none;
       color: #2c67b0;
       text-decoration: underline;
       font-weight: 500;
       padding: 0;
+      text-align: right;
     }
-    .details-row{
+    .details-row {
       display: flex;
       align-content: center;
       align-items: center;
