--- a/src/components/steps/Review.scss
+++ b/src/components/steps/Review.scss
@@ -15,7 +15,7 @@
 
     dt {
       width: 25%;
-      min-width: 7em;
+      min-width: 25%;
       background: #f4f5f9;
       display: inline-block;
       padding: 0.5em 0 0.5em 1em;
