--- a/src/components/steps/Optional.scss
+++ b/src/components/steps/Optional.scss
@@ -20,6 +20,9 @@
         padding: 0;
       }
     }
+    .alt-text {
+      padding: 0.3em;
+    }
   }
   .optional-second-part {
     display: flex;
