--- a/src/components/generic/selector/CheckboxList/CheckboxList.scss
+++ b/src/components/generic/selector/CheckboxList/CheckboxList.scss
@@ -1,6 +1,4 @@
-.h5p-hub-publish {
-  .checkbox-list {
-    list-style: none;
-    padding: 0;
-  }
+.h5p-hub-publish .checkbox-list {
+  list-style: none;
+  padding: 0;
 }
