JI-1696 Add registration ui

--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -22,7 +22,7 @@
     }
 }
 
-.h5p-hub-publish {
+.h5p-hub-publish, .h5p-registration-ui-wrapper  {
   position: relative;
   margin: 2em auto;
   font-family: 'Open Sans', sans-serif;
