--- a/src/components/generic/form/Element.scss
+++ b/src/components/generic/form/Element.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/mixins';
 
-.h5p-hub-publish {
+.h5p-hub-publish, .h5p-registration-ui {
   .form-element {
     font-family: 'Open Sans', sans-serif;
     padding: 1em 0;
