--- a/src/components/generic/form/ImageUpload.scss
+++ b/src/components/generic/form/ImageUpload.scss
@@ -1,88 +1,91 @@
-.h5p-hub-publish .image-upload-container {
-  width: 4em;
-  height: 3em;
-  margin-right: 1em;
-  position: relative;
+.h5p-hub-publish,
+.h5p-registration-ui {
+  .image-upload-container {
+    width: 4em;
+    height: 3em;
+    margin-right: 1em;
+    position: relative;
 
-  .image-preview {
-    position: absolute;
-    left: 4px;
-    top: 4px;
-    width: calc(100% - 4px);
-    height: calc(100% - 4px);
-  }
-
-  .icon-close {
-    cursor: pointer;
-
-    &:before {
-      font-size: 0.6em;
-      padding: 0.5em;
-      line-height: 1.1;
-      color: #fff;
-      background: #000;
+    .image-preview {
       position: absolute;
-      z-index: 1;
-      display: inline-block;
-      right: -1.2em;
-      top: -1.2em;
-      
-      border: 3px solid #fff;
-      border-radius: 50%;
-      cursor: pointer;
-      transition: all 0.3s;
+      left: 4px;
+      top: 4px;
+      width: calc(100% - 4px);
+      height: calc(100% - 4px);
     }
 
-    &:hover:before {
-      background: #eee;
-      color: #000;
-    }
-  }
-
-  .image-upload {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0.125em dashed #bebdcd;
-    color: #bebdcd;
-    text-align: center;
-    transition: all 0.3s;
-
-    input {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
+    .icon-close {
       cursor: pointer;
-      opacity: 0;
-      &::-webkit-file-upload-button {
-        visibility: hidden;
+
+      &:before {
+        font-size: 0.6em;
+        padding: 0.5em;
+        line-height: 1.1;
+        color: #fff;
+        background: #000;
+        position: absolute;
+        z-index: 1;
+        display: inline-block;
+        right: -1.2em;
+        top: -1.2em;
+
+        border: 3px solid #fff;
+        border-radius: 50%;
+        cursor: pointer;
+        transition: all 0.3s;
+      }
+
+      &:hover:before {
+        background: #eee;
+        color: #000;
       }
     }
 
-    &:hover {
-      color: #777;
-      border-color: #777;
-    }
+    .image-upload {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 0.125em dashed #bebdcd;
+      color: #bebdcd;
+      text-align: center;
+      transition: all 0.3s;
 
-    &:before {
-      content: '+';
-      font-size: 2em;
-      display: inline-block;
-      position: relative;
-      top: 50%;
-      transform: translateY(-50%);
-    }
+      input {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+        opacity: 0;
+        &::-webkit-file-upload-button {
+          visibility: hidden;
+        }
+      }
 
-    &.image-selected {
-      border-style: solid;
-      border-radius: 0.1em;
+      &:hover {
+        color: #777;
+        border-color: #777;
+      }
 
       &:before {
-        display: none;
+        content: "+";
+        font-size: 2em;
+        display: inline-block;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
+      &.image-selected {
+        border-style: solid;
+        border-radius: 0.1em;
+
+        &:before {
+          display: none;
+        }
       }
     }
   }
