--- a/src/components/generic/selector/Checkbox/Checkbox.scss
+++ b/src/components/generic/selector/Checkbox/Checkbox.scss
@@ -11,7 +11,7 @@
   align-self: center;
 }
 
-.h5p-hub-publish {
+.h5p-hub-publish , .h5p-registration-ui {
   .checkbox {
     font-size: 1.05em;
     padding: 0.5em 0;
