--- a/src/components/generic/button/Button.scss
+++ b/src/components/generic/button/Button.scss
@@ -1,5 +1,5 @@
 .h5p-hub-publish,
-.h5p-registration-ui {
+.h5p-hub-registration {
   button {
     font-family: "Open Sans", sans-serif;
     font-size: 0.75em;
