--- a/src/components/generic/message/Message.scss
+++ b/src/components/generic/message/Message.scss
@@ -1,5 +1,5 @@
 .h5p-hub-publish,
-.h5p-registration-ui {
+.h5p-hub-registration {
   .message {
     font-size: 0.833em;
     border-left: 0.3em solid;
