--- a/src/components/generic/textField/TextField.scss
+++ b/src/components/generic/textField/TextField.scss
@@ -1,6 +1,6 @@
 @import "../../../styles/mixins";
 
-.h5p-registration-ui {
+.h5p-hub-registration {
   .text-field {
     padding: 1.5em;
     overflow: hidden;
