Align row form elements

--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -124,6 +124,7 @@
       flex-basis: 100%;
       flex: 1;
       min-width: 17em;
+      align-self: flex-end;
       //Make space between elements that isn't showed when wrapped
       border-right: 1em solid #ffffff;
 
