HFP-3046 Consolidate font with h5p-core

--- a/index.css
+++ b/index.css
@@ -13,12 +13,12 @@ code {
 }
 
 @font-face {
-  font-family: 'h5p-hub-publish';
-  src:  url('src/assets/fonts/h5p-hub-publish.eot?wy8ylc');
-  src:  url('src/assets/fonts/h5p-hub-publish.eot?wy8ylc#iefix') format('embedded-opentype'),
-    url('src/assets/fonts/h5p-hub-publish.ttf?wy8ylc') format('truetype'),
-    url('src/assets/fonts/h5p-hub-publish.woff?wy8ylc') format('woff'),
-    url('src/assets/fonts/h5p-hub-publish.svg?wy8ylc#h5p-hub') format('svg');
+  font-family: 'h5p';
+  src:  url('src/assets/fonts/h5p-core-26.eot?wy8ylc');
+  src:  url('src/assets/fonts/h5p-core-26.eot?wy8ylc#iefix') format('embedded-opentype'),
+    url('src/assets/fonts/h5p-core-26.ttf?wy8ylc') format('truetype'),
+    url('src/assets/fonts/h5p-core-26.woff?wy8ylc') format('woff'),
+    url('src/assets/fonts/h5p-core-26.svg?wy8ylc#h5p-hub') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
