--- a/src/components/generic/stepper/Step.scss
+++ b/src/components/generic/stepper/Step.scss
@@ -16,6 +16,10 @@
     position: relative;
     background: #fff;
     box-sizing: border-box;
+
+    .icon-check {
+      line-height: 2.276;
+    }
   }
 
   .step-label {
