--- a/src/components/generic/dropdown/Dropdown.scss
+++ b/src/components/generic/dropdown/Dropdown.scss
@@ -32,7 +32,8 @@
     pointer-events: none;
 
     &:before {
-      content: "\e900";	
+      content: "\e925";
+      transform: rotate(90deg);
       position: absolute;
       right: 1em;
       top: 1.8em;
