--- a/src/components/generic/selector/Checkbox/Checkbox.scss
+++ b/src/components/generic/selector/Checkbox/Checkbox.scss
@@ -1,7 +1,7 @@
 @mixin arrow-right {
   color: #121212;
-  font-family: 'h5p-hub-publish';
-  content: '\e907';
+  font-family: 'h5p';
+  content: '\e924';
   transform: rotate(-90deg);
   font-style: normal;
   font-size: 0.7em;
@@ -57,8 +57,8 @@
     .content {
       .icon {
         &::before {
-          font-family: 'h5p-hub-publish';
-          content: '\e908';
+          font-family: 'h5p';
+          content: '\e923';
           font-style: normal;
           font-weight: normal;
           font-size: 1em;
@@ -72,8 +72,8 @@
       .content {
         .icon {
           &::before {
-            content: '\e909';
-            font-family: 'h5p-hub-publish';
+            content: '\e938';
+            font-family: 'h5p';
             font-style: normal;
             font-weight: normal;
             font-size: 1em;
