--- a/src/components/generic/selector/SearchField/SearchField.scss
+++ b/src/components/generic/selector/SearchField/SearchField.scss
@@ -7,14 +7,15 @@
       .icon-arrow {
         position: absolute;
         font-size: 1.30353em;
-        top: 0.7em;
+        top: 1.2em;
         right: 0.7em;
         cursor: pointer;
         color: #000000;
+        transform: rotate(90deg);
 
         &::before {
-          content: "\e900";
-          font-family: "h5p-hub-publish";
+          content: "\e925";
+          font-family: "h5p";
           font-style: normal;
           font-size: 0.6em;
         }
