--- a/src/components/generic/selector/SearchFilter/SearchFilter.scss
+++ b/src/components/generic/selector/SearchFilter/SearchFilter.scss
@@ -13,8 +13,8 @@
     color: #757575;
     border: none; 
     &::before {
-      content: "\e904";
-      font-family: "h5p-hub-publish";
+      content: "\e93a";
+      font-family: "h5p";
       font-style: normal;
       font-size: 1em;
     }
@@ -40,8 +40,8 @@
       border: none;
 
       &::before {
-        content: "\e90a";	
-        font-family: "h5p-hub-publish";
+        content: "\e937";
+        font-family: "h5p";
         transform: rotate(180deg);
         font-weight: normal;
         display: inline-block;
