Increase step-title line-height to normal

--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -59,6 +59,7 @@
     font-weight: bold;
     border-bottom: 1px solid #ccc;
     padding: 1.2em 1.8em;
+    line-height: normal;
   }
 
   .step-content {
