HFP-3118 Always show expand arrow for categories

--- a/src/components/generic/selector/Checkbox/Checkbox.scss
+++ b/src/components/generic/selector/Checkbox/Checkbox.scss
@@ -27,15 +27,8 @@
       outline: none;
     }
 
-    &:hover {
-      &.parent:after {
-        @include arrow-right;
-      }
-    }
-    &.highlighted {
-      &.parent:after {
-        @include arrow-right;
-      }
+    &.parent::after {
+      @include arrow-right;
     }
 
     .content {
