HFP-3112 Absolute position dropdown arrow right

--- a/src/components/generic/selector/SearchField/SearchField.scss
+++ b/src/components/generic/selector/SearchField/SearchField.scss
@@ -9,6 +9,7 @@
 
       .icon-arrow {
         position: absolute;
+        right: 1em;
         font-size: 1.30353em;
         cursor: pointer;
         color: #000000;
