HFP-3049 Implement cancel with confirmation dialog

--- a/src/components/generic/modal/Modal.scss
+++ b/src/components/generic/modal/Modal.scss
@@ -1,5 +1,6 @@
 .h5p-hub-publish {
-  .modal-content {
+  .modal-content,
+  .cancel-publish-confirmation-modal {
     z-index: 2;
     background-color: #ffffff;
     opacity: 1;
