HFP-3049 Address comments from code review

--- a/src/components/generic/modal/Modal.scss
+++ b/src/components/generic/modal/Modal.scss
@@ -1,6 +1,5 @@
 .h5p-hub-publish {
-  .modal-content,
-  .cancel-publish-confirmation-modal {
+  .modal-content {
     z-index: 2;
     background-color: #ffffff;
     opacity: 1;
