--- a/src/components/generic/selector/Checkbox/Checkbox.scss
+++ b/src/components/generic/selector/Checkbox/Checkbox.scss
@@ -21,6 +21,7 @@
     align-self: start;
     color: #4d5057;
     width: 100%;
+    position: relative;
 
     &:focus {
       box-shadow: 0 0 0.4em 0.01em RGBA(26, 147, 244, 0.7);
